--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -193,10 +193,11 @@ a {
   border-bottom: dotted 1px;
   color: #49bf9d;
   text-decoration: none;
+  border-bottom: none;
 }
 a:hover {
   border-bottom-color: transparent;
-  color: #49bf9d !important;
+  color: #49bf9d;
   text-decoration: none;
 }
 
@@ -1735,13 +1736,13 @@ input[type=radio] + label:before {
 }
 .image:before {
   transition: opacity 0.2s ease-in-out;
-  background: url("images/overlay.png");
+  background: black;
   border-radius: 0.35em;
   content: "";
   display: block;
   height: 100%;
   left: 0;
-  opacity: 0.5;
+  opacity: 0;
   position: absolute;
   top: 0;
   width: 100%;
@@ -1752,8 +1753,8 @@ input[type=radio] + label:before {
 .image.thumb:after {
   transition: opacity 0.2s ease-in-out;
   border-radius: 0.35em;
-  border: solid 3px #49bf9d;
-  color: #49bf9d;
+  border: solid 3px white;
+  color: white;
   content: "View";
   display: inline-block;
   font-size: 0.8em;
@@ -1773,8 +1774,8 @@ input[type=radio] + label:before {
   opacity: 1;
 }
 .image.thumb:hover:before {
-  background: url("images/overlay.png"), url("images/overlay.png");
-  opacity: 1;
+  background: black;
+  opacity: 0.3;
 }
 .image img {
   border-radius: 0.35em;
@@ -2165,6 +2166,9 @@ input[type=button]:disabled,
   line-height: 1.5em;
   margin: 0;
 }
+.work-item a:hover {
+  color: #787878;
+}
 
 /* Header */
 #header {
@@ -2233,6 +2237,9 @@ input[type=button]:disabled,
 }
 #footer .icons a {
   color: rgba(255, 255, 255, 0.4);
+}
+#footer .icons a:hover {
+  color: #49bf9d;
 }
 #footer .copyright {
   color: rgba(255, 255, 255, 0.4);
@@ -2669,4 +2676,4 @@ article.special {
     margin-left: 0;
     padding-left: 0;
   }
-}/*# sourceMappingURL=main.css.map */
+}
