--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -247,10 +247,11 @@ a {
   border-bottom: dotted 1px;
   color: _palette(accent1, bg);
   text-decoration: none;
+  border-bottom: none;
 
   &:hover {
     border-bottom-color: transparent;
-    color: _palette(accent1, bg) !important;
+    color: _palette(accent1, bg);
     text-decoration: none;
   }
 }
@@ -723,13 +724,13 @@ input[type="radio"] {
       "transition",
       "opacity #{_duration(transition)} ease-in-out"
     );
-    background: url("images/overlay.png");
+    background: black;
     border-radius: _size(border-radius);
     content: "";
     display: block;
     height: 100%;
     left: 0;
-    opacity: 0.5;
+    opacity: 0;
     position: absolute;
     top: 0;
     width: 100%;
@@ -744,8 +745,8 @@ input[type="radio"] {
         "opacity #{_duration(transition)} ease-in-out"
       );
       border-radius: _size(border-radius);
-      border: solid 3px _palette(accent1, bg);
-      color: _palette(accent1, bg);
+      border: solid 3px white;
+      color: white;
       content: "View";
       display: inline-block;
       font-size: 0.8em;
@@ -768,8 +769,8 @@ input[type="radio"] {
       }
 
       &:before {
-        background: url("images/overlay.png"), url("images/overlay.png");
-        opacity: 1;
+        background: black;
+        opacity: 0.3;
       }
     }
   }
@@ -1201,6 +1202,12 @@ input[type="button"],
     line-height: 1.5em;
     margin: 0;
   }
+
+  a {
+    &:hover {
+      color: _palette(fg-bold);
+    }
+  }
 }
 
 /* Header */
@@ -1269,6 +1276,9 @@ input[type="button"],
 
     a {
       color: _palette(accent2, fg-light);
+      &:hover {
+        color: #49bf9d;
+      }
     }
   }
 
